--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,16 @@ dependencies:
 
   # Persist simple user settings
   shared_preferences: ^2.1.0
+  
+  # Date and number formatting
+  intl: ^0.20.2
+  
+  # Charting library for visualization
+  fl_chart: ^1.0.0
+  
+  # File sharing and picking
+  share_plus: ^7.2.1
+  file_picker: ^6.1.1
 
 dev_dependencies:
   flutter_test:
